--- a/Web.Statu/Views/Subjekt/Index.cshtml
+++ b/Web.Statu/Views/Subjekt/Index.cshtml
@@ -105,7 +105,7 @@
     @* ----- Registr smluv ----- *@
 
     <div>
-        <h4>Registr smluv</h4>
+        <h4><a href="/subjekt2/RegistrSmluv/@Model.ICO">Registr smluv</a></h4>
 
         @{
             var currentYear = DateTime.Now.Year;
@@ -167,14 +167,13 @@
         </p>
 
         <p>V @(seasonStat?.Rok) utajil hodnotu kontraktu u <a href="/hledat?q=ico:@(Model.ICO) AND cena:0 AND datumUzavreni:[@(seasonStat?.Rok)-01-01 TO @(seasonStat?.Rok + 1)-01-01}"><strong>@(seasonStat?.PocetBezCeny)</strong> smluv</a>, což je celkem @(seasonStat?.ProcentBezCeny.ToString("N2")) % ze všech.</p>
-        <a href="/subjekt2/RegistrSmluv/@Model.ICO" class="text-uppercase"><strong>Zobrazit podrobnosti</strong></a>
     </div>
     <hr />
 
     @* ----- Veřejné zakázky -----*@
 
     <div>
-        <h4>Veřejné zakázky</h4>
+        <h4><a href="/subjekt2/VerejneZakazky/@Model.ICO">Veřejné zakázky</a></h4>
         @{
             var resVZdodav = HlidacStatu.Lib.Data.VZ.VerejnaZakazka.Searching.SimpleSearch("icododavatel:" + Model.ICO, null, 1, 0, "1");
             var resVZzadav = HlidacStatu.Lib.Data.VZ.VerejnaZakazka.Searching.SimpleSearch("icozadavatel:" + Model.ICO, null, 1, 0, "1");
@@ -194,14 +193,13 @@
                 </p>
             }
         }
-        <a href="/subjekt2/VerejneZakazky/@Model.ICO" class="text-uppercase"><strong>Zobrazit podrobnosti</strong></a>
     </div>
     <hr />
 
     @* ----- Dotace -----*@
 
     <div>
-        <h4>Dotace</h4>
+        <h4><a href="/subjekt2/Dotace/@Model.ICO">Dotace</a></h4>
 
         @{
             var dotaceService = new HlidacStatu.Lib.Data.Dotace.DotaceService();
@@ -318,7 +316,7 @@
     @* ----- Insolvence -----*@
 
     <div>
-        <h4>Insolvenční rejstřík</h4>
+        <h4><a href="/subjekt2/InsolvencniRejstrik/@Model.ICO">Insolvenční rejstřík</a></h4>
 
         @{ var insDluznik = HlidacStatu.Lib.Data.Insolvence.Insolvence.SimpleSearch("icodluznik:" + Model.ICO, 1, 1, (int)HlidacStatu.Lib.Searching.InsolvenceSearchResult.InsolvenceOrderResult.FastestForScroll, false, HlidacStatu.Web.Framework.InsolvenceLimitedView.IsLimited(this.User));
             var insVeritel = HlidacStatu.Lib.Data.Insolvence.Insolvence.SimpleSearch("icoveritel:" + Model.ICO, 1, 1, (int)HlidacStatu.Lib.Searching.InsolvenceSearchResult.InsolvenceOrderResult.FastestForScroll, false, HlidacStatu.Web.Framework.InsolvenceLimitedView.IsLimited(this.User));
@@ -341,7 +339,6 @@
                 </p>
             }
 
-        <a href="/subjekt2/InsolvencniRejstrik/@Model.ICO" class="text-uppercase"><strong>Zobrazit podrobnosti</strong></a>
     </div>
     <hr />
 
